# findtext-sheet-rs

./: Cargo.toml  README.md
.github/workflows/: release-executable.yaml
src/: lib.rs  main.rs
src/core/: search.rs
tests/: test.rs
tests/fixtures/: file1.xlsx
